--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
+    <meta name="google-site-verification" content="QhhrYNk8jJgFMj1BYN-znlbN14Z-vFlETTuq-eto2DE" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="shortcut icon" href="https://i.ibb.co.com/wcJmVM0/459560130-917975487043777-2750044922410275911-n.jpg" type="image/x-icon">
+    <link rel="canonical" href="https://hujanperkalianmahjong-pro.tumblr.com/">
     <title>HUJAN PERKALIAN MAHJONG | BUKA AKSES SEKALI PAKAI LANGSUNG JP</title>
     <meta name="title" content="HUJAN PERKALIAN MAHJONG | BUKA AKSES SEKALI PAKAI LANGSUNG JP">
     <meta name="description" content="HUJAN PERKALIAN MAHJONG |BUKA AKSES SEKALI PAKAI LANGSUNG JP. $39.00. or. $3.67/mo.per month for 12 mo.monthsFootnote ">
