--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
+    <meta name="google-site-verification" content="FyzrgAEXr6JTjOOlVcsTCAQWmHLkBOvFiFtfFkKxn-o" />
     <meta name="google-site-verification" content="QhhrYNk8jJgFMj1BYN-znlbN14Z-vFlETTuq-eto2DE" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
