--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
-    <meta name="google-site-verification" content="FyzrgAEXr6JTjOOlVcsTCAQWmHLkBOvFiFtfFkKxn-o" />
-    <meta name="google-site-verification" content="QhhrYNk8jJgFMj1BYN-znlbN14Z-vFlETTuq-eto2DE" />
+    <meta name="google-site-verification" content="NFJ741iGFEbCb-YlkPUlo4vEVtlaHbiMXllNYrVZ3xQ" />  
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="shortcut icon" href="https://i.ibb.co.com/wcJmVM0/459560130-917975487043777-2750044922410275911-n.jpg" type="image/x-icon">
     <link rel="canonical" href="https://hujanperkalianmahjong-pro.tumblr.com/">
-    <title>HUJAN PERKALIAN MAHJONG | BUKA AKSES SEKALI PAKAI LANGSUNG JP</title>
-    <meta name="title" content="HUJAN PERKALIAN MAHJONG | BUKA AKSES SEKALI PAKAI LANGSUNG JP">
-    <meta name="description" content="HUJAN PERKALIAN MAHJONG |BUKA AKSES SEKALI PAKAI LANGSUNG JP. $39.00. or. $3.67/mo.per month for 12 mo.monthsFootnote ">
+    <title>HUJAN PERKALIAN | BUKA AKSES SEKALI PAKAI LANGSUNG JP</title>
+    <meta name="title" content="HUJAN PERKALIAN | BUKA AKSES SEKALI PAKAI LANGSUNG JP">
+    <meta name="description" content="HUJAN PERKALIAN | BUKA AKSES SEKALI PAKAI LANGSUNG JP. $39.00. or. $3.67/mo.per month for 12 mo.monthsFootnote ">
     <style amp-boilerplate>
         body {
             -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -333,17 +332,17 @@
                 </div>
                 <div class="ataslink">
                     <a href="https://t.ly/ranger60" class="SITUS-GACOR" rel="nofollow">
-                        <div class="debar">DAFTAR HUJAN PERKALIAN MAHJONG</div>
+                        <div class="debar">DAFTAR</div>
                     </a>
                     <a href="https://t.ly/ranger60" class="SITUS-GACOR" rel="nofollow">
-                        <div class="debar">LOGIN HUJAN PERKALIAN MAHJONG</div>
+                        <div class="debar">LOGIN</div>
                     </a>
                     <a href="https://t.ly/ranger60" class="SITUS-GACOR" rel="nofollow">
-                        <div class="debar">LINK HUJAN PERKALIAN MAHJONG</div>
+                        <div class="debar">LINK</div>
                     </a>
                 </div>
                 <br>
-                <h2>HUJAN PERKALIAN MAHJONG | BUKA AKSES SEKALI PAKAI LANGSUNG JP. $39.00. or. $3.67/mo.per month for 12 mo.monthsFootnote</h2>
+                <h2>HUJAN PERKALIAN | BUKA AKSES SEKALI PAKAI LANGSUNG JP. $39.00. or. $3.67/mo.per month for 12 mo.monthsFootnote</h2>
                 <br>
                 <br>
                 <div class="footer">
