--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <div class="atasbox">
                 <div>
                     <amp-img class="imghero" height="700" width="700" layout="responsive" alt="SITUS GACOR"
-                        src="https://i.ibb.co.com/CJ8J7vQ/scatter-hitam1.jpg"></amp-img>
+                         src="https://i.imghippo.com/files/7FrfW1726844193.jpg"></amp-img>
                 </div>
                 <div class="ataslink">
                     <a href="https://t.ly/ranger60" class="SITUS-GACOR" rel="nofollow">
