--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="shortcut icon" href="https://i.ibb.co.com/wcJmVM0/459560130-917975487043777-2750044922410275911-n.jpg" type="image/x-icon">
     <link rel="canonical" href="https://hujanperkalianmahjong-pro.tumblr.com/">
-    <title>HUJAN PERKALIAN | BUKA AKSES SEKALI PAKAI LANGSUNG JP</title>
-    <meta name="title" content="HUJAN PERKALIAN | BUKA AKSES SEKALI PAKAI LANGSUNG JP">
-    <meta name="description" content="HUJAN PERKALIAN | BUKA AKSES SEKALI PAKAI LANGSUNG JP. $39.00. or. $3.67/mo.per month for 12 mo.monthsFootnote ">
+    <title>LAPAK SCATTER PRAGMA | BUKA AKSES SEKALI PAKAI LANGSUNG JP $100</title>
+    <meta name="title" content="LAPAK SCATTER PRAGMA | BUKA AKSES SEKALI PAKAI LANGSUNG JP $100">
+    <meta name="description" content="LAPAK SCATTER PRAGMA | BUKA AKSES SEKALI PAKAI LANGSUNG JP. $100.00 or $200.00/per month for Buy Robot sccater pragma names and enjoy 24/7 support
+">
     <style amp-boilerplate>
         body {
             -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
