--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <link rel="shortcut icon" href="https://i.ibb.co.com/wcJmVM0/459560130-917975487043777-2750044922410275911-n.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.imghippo.com/files/7FrfW1726844193.jpg" type="image/x-icon">
     <link rel="canonical" href="https://hujanperkalianmahjong-pro.tumblr.com/">
     <title>LAPAK SCATTER PRAGMA | BUKA AKSES SEKALI PAKAI LANGSUNG JP $100</title>
     <meta name="title" content="LAPAK SCATTER PRAGMA | BUKA AKSES SEKALI PAKAI LANGSUNG JP $100">
