--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="shortcut icon" href="https://i.imghippo.com/files/7FrfW1726844193.jpg" type="image/x-icon">
-    <link rel="canonical" href="https://hujanperkalianmahjong-pro.tumblr.com/">
+    <link rel="canonical" href="https://hujanperkalianmahjong-pro.tumblr.com/" />
     <title>LAPAK SCATTER PRAGMA | BUKA AKSES SEKALI PAKAI LANGSUNG JP $100</title>
     <meta name="title" content="LAPAK SCATTER PRAGMA | BUKA AKSES SEKALI PAKAI LANGSUNG JP $100">
     <meta name="description" content="LAPAK SCATTER PRAGMA | BUKA AKSES SEKALI PAKAI LANGSUNG JP. $100.00 or $200.00/per month for Buy Robot sccater pragma names and enjoy 24/7 support
